--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
+    "cheerio": "^1.0.0-rc.3",
     "circular-json-es6": "^2.0.2",
     "csv-parse": "^4.6.5",
     "csv-parser": "^2.3.2",
@@ -17,6 +18,9 @@
     "json-stringify-safe": "^5.0.1",
     "n-readlines": "^1.0.0",
     "nodemon": "^2.0.1",
+    "puppeteer": "^2.0.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "sails": "^1.1.0",
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
